--- a/steganography.html
+++ b/steganography.html
@@ -11,6 +11,10 @@
                 <p class="text--big">First you should enter text in field below</p>
                 <input id="input_text">
             </div>
+            <div id="encoded_info" class="box">
+                <p class="text--big">There is your encoded text</p>
+                <p id="encoded_input"></p>
+            </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
         <script src="resources/js/ajax/Cryptography.js"></script>
