Added picture dragging functionality

--- a/steganography.html
+++ b/steganography.html
@@ -15,6 +15,11 @@
                 <p class="text--big">There is your encoded text</p>
                 <p id="encoded_input"></p>
             </div>
+            <div id="picture_entry" class="box">
+                <p class="text--big">Upload image for further processing</p>
+                <p>(You can drag it anywhere)</p>
+                <input id="input_picture" type="file" accept="image/*">
+            </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
         <script src="resources/js/ajax/Cryptography.js"></script>
