--- a/steganography.html
+++ b/steganography.html
@@ -22,7 +22,7 @@
             </div>
             <div id="picture_entry" class="box">
                 <p class="text--big">Upload image for further processing</p>
-                <p>(You can drag it anywhere)</p>
+                <p>(You can drag and drop it anywhere)</p>
                 <input id="input_picture" type="file" accept="image/*">
             </div>
             <div id="result" class="box">
